rename the function to rewriteUmrechnungstabURL

--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -290,7 +290,7 @@
                                role="button"
                                title="Umrechnungsdatei"
                                i18n-title
-                               [href]="defineUmrechnungstabURL(umrechnung.dateiname)"
+                               [href]="rewriteUmrechnungstabURL(umrechnung.dateiname)"
                                target="_blank"
                                rel="noopener noreferrer nofollow">
                                 {{umrechnung.text | einflussgroesse}}
