--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -308,7 +308,7 @@
             <div class="row"
                  role="row">
                 <h5 class="col-12 mb-0"
-                    role="columnheader"><strong i18n>Herausgeber</strong>
+                    role="columnheader"><strong i18n>Herausgegeben von</strong>
                 </h5>
             </div>
         </div>
@@ -336,8 +336,8 @@
                        target="_blank"
                        rel="noopener noreferrer nofollow"
                        i18n-alt
-                       alt="Herausgeber"
-                       title="Herausgeber"
+                       alt="Herausgegeben von"
+                       title="Herausgegeben von"
                        i18n-title>{{ filteredFeatures[0]?.properties.gabe }}</a>
                 </dd>
             </dl>
