--- a/power/src/app/fragebogen/editor/conditions/conditions.component.html
+++ b/power/src/app/fragebogen/editor/conditions/conditions.component.html
@@ -131,7 +131,7 @@
     <option value="{pagecount}"
             i18n>Seitenanzahl</option>
     <option value="{locale}"
-            i18n>Sprache des Benutzers in Kurzform (z.B. de)</option>
+            i18n>Sprache der nutzenden Person in Kurzform (z.B. de)</option>
     <option value="{correctedanswers}"
             i18n>Anzahl korrekter Antworten (Quiz)</option>
     <option value="{incorrectedanswers}"
