--- a/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
+++ b/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
@@ -69,9 +69,8 @@
                     </select>
                     <small id="form-localeHelp"
                            class="form-text text-muted"
-                           i18n>Die Standardsprache, welche dem Benutzer angezeigt wird. Der Benutzer hat die
-                        Möglichkeit
-                        die Sprache zu wechseln.</small>
+                           i18n>Die Standardsprache, welche der nutzenden Person angezeigt wird. Die nutzende Person hat
+                        die Möglichkeit die Sprache zu wechseln.</small>
                 </div>
 
                 <!-- form-showQuestionNumbers-->
@@ -130,7 +129,8 @@
                            autocomplete="off">
                     <small id="form-navigateToUrlHelp"
                            class="form-text text-muted"
-                           i18n>Der Benutzer wird nach Abschluss des Formulares an diese Adresse weitergeleitet.</small>
+                           i18n>Die nutzenden Person wird nach Abschluss des Formulars an diese Adresse
+                        weitergeleitet.</small>
                 </div>
             </accordion-group>
 
@@ -292,8 +292,8 @@
                     </select>
                     <small id="form-showPreviewBeforeCompleteHelp"
                            class="form-text text-muted"
-                           i18n>Dem Benutzer kann eine Vorschau angezeigt werden seiner Antworten, bevor er das Formular
-                        final absendet.</small>
+                           i18n>Der nutzenden Person kann eine Vorschau der Antworten angezeigt werden, bevor das
+                        Formular final absendet wird.</small>
                 </div>
 
                 <!-- form-showProgressBar-->
