--- a/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
+++ b/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
@@ -383,7 +383,7 @@
                     <!-- question-step -->
                     <div class="form-group">
                         <label for="question-step"
-                               i18n>Skala Schrittinterval</label>
+                               i18n>Skala Schrittintervall</label>
                         <input type="number"
                                class="form-control"
                                step="0.01"
@@ -420,7 +420,7 @@
                         <small id="question-decimalsHelp"
                                *ngIf="model.pages[page].elements[question].step % 1 !== 0 && model.pages[page].elements[question].decimals === 0"
                                class="form-text text-danger"
-                               i18n>Der Schrittinterval erlaubt Nachkommastellen, Sie müssen zur Anzeige von
+                               i18n>Das Schrittintervall erlaubt Nachkommastellen. Sie müssen zur Anzeige von
                             Nachkommastellen diesen Wert hochstellen.</small>
                     </div>
 
