--- a/power/src/app/fragebogen/home/home.component.html
+++ b/power/src/app/fragebogen/home/home.component.html
@@ -180,12 +180,12 @@
                 </h2>
 
                 <p class="lead"
-                   i18n>Interner Bereich für die Mitarbeiter der Landesvermessung von Niedersachsen.</p>
+                   i18n>Interner Bereich für die Mitarbeitenden der Landesvermessung von Niedersachsen.</p>
                 <hr class="my-4">
 
                 <div class="lead">
                     <a [routerLink]="['/forms/dashboard']"
-                       aria-label="Über diesen Link gelangen Sie zum Mitarbeiterportal."
+                       aria-label="Über diesen Link gelangen Sie zum Mitarbeitendenportal."
                        i18n-aria-label>
                         <svg width="1em"
                              height="1em"
@@ -203,7 +203,7 @@
                                   d="M2 13.5A1.5 1.5 0 0 1 .5 12V4A1.5 1.5 0 0 1 2 2.5h7A1.5 1.5 0 0 1 10.5 4v1.5a.5.5 0 0 1-1 0V4a.5.5 0 0 0-.5-.5H2a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 .5-.5v-1.5a.5.5 0 0 1 1 0V12A1.5 1.5 0 0 1 9 13.5H2z" />
                         </svg>
                         <span class="ml-1"
-                              i18n>Zum Mitarbeiterportal</span>
+                              i18n>Zum Mitarbeitendenportal</span>
                     </a>
                 </div>
             </div>
