--- a/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
+++ b/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
@@ -54,7 +54,7 @@
                             <span *ngIf="sort && sort === 'title'">
                                 <span *ngIf="!desc"
                                       id="ascSortedTitle"
-                                      title="Aufsteigend sortiert."
+                                      title="Aufsteigend sortiert"
                                       i18n-title>
                                     <svg width="1em"
                                          height="0.8em"
@@ -71,7 +71,7 @@
                                 <span *ngIf="desc"
                                       id="descSortedTitle"
                                       i18n-title
-                                      title="Absteigend sortiert.">
+                                      title="Absteigend sortiert">
                                     <svg width="1em"
                                          height="0.8em"
                                          viewBox="0 1.2 16 16"
@@ -100,7 +100,7 @@
                             <span *ngIf="sort && sort === 'tags'">
                                 <span *ngIf="!desc"
                                       id="ascSortedTags"
-                                      title="Aufsteigend sortiert."
+                                      title="Aufsteigend sortiert"
                                       i18n-title>
                                     <svg width="1em"
                                          height="0.8em"
@@ -116,7 +116,7 @@
                                 </span>
                                 <span *ngIf="desc"
                                       id="descSortedTags"
-                                      title="Absteigend sortiert."
+                                      title="Absteigend sortiert"
                                       i18n-title>
                                     <svg width="1em"
                                          height="0.8em"
