--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -542,7 +542,7 @@
             <a href="{{nipixStatic.agnbUrl}}"
                target="_blank"
                rel="noopener noreferrer nofollow"
-               i18n="AGNB">Allgemeinen Geschäfts- und Nutzungsbedingungen (AGNB)</a>
+               i18n="AGNB">Allgemeine Geschäfts- und Nutzungsbedingungen (AGNB)</a>
         </div>
     </div>
 </div>
