--- a/power/src/app/static/ogc-services/ogc-services.component.html
+++ b/power/src/app/static/ogc-services/ogc-services.component.html
@@ -34,7 +34,7 @@
                         <i class="bi bi-building"
                            role="img"
                            i18n-aria-label
-                           aria-label="Ansprechpartner"></i>
+                           aria-label="Kontaktperson"></i>
                     </th>
                     <td><span i18n>Landesamt für Geoinformation und Landesvermessung Niedersachsen (LGLN)</span>
                         <br> - <span i18n>Landesbetrieb</span>
