--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -476,7 +476,7 @@
                         i18n>OGC Darstellungs- und Downloaddienste</h3>
                     <p class="text-justify"
                        i18n>Mithilfe der OGC konformen Dienste Web Map Service (WMS) und Web Feature Service (WFS) der
-                        Bodenrichtwerte können Nutzer die Daten in Ihren eigenen GIS-Systemen nutzen, bzw. in eigene
+                        Bodenrichtwerte können Nutzende die Daten in Ihren eigenen GIS-Systemen nutzen, bzw. in eigene
                         Applikationen einbinden.</p>
                 </div>
             </div>
